--- a/localisation/TD_unit_names_l_english.yml
+++ b/localisation/TD_unit_names_l_english.yml
@@ -141,79 +141,79 @@
  eastern_medieval_infantryDESCR: "Raised from serf and other peasant communities these poorly armed and poorly trained infantry will not be of too much use in combat. However, why waste the nobility in dangerous assaults on fortresses?"
 
  bardiche_infantry: "Bardiche Infantry"
- bardiche_infantryDESCR: "Infantry units equipped with long poleaxes, 'Bardiches' of varied sizes and shapes commonly employed by Eastern European countries."
+ bardiche_infantryDESCR: "Infantry units equipped with long poleaxes, 'Bardiches' of varied sizes and shapes commonly employed by western Kakigian countries."
 
  eastern_knights: "Kakigian Knights"
  eastern_knightsDESCR: "Like their counterparts in the West, the Eastern Knights represented the pinnacle of military technology, raised from the nobility who could afford to maintain horses and were highly trained. The cavalry charge decided many battles in this era."
 
  akhalivan_raiders: "Akhalivan Raiders"
- akhalivan_raidersDESCR: "Cavalry units equipped with battle-axes that made up the core of many eastern European armies. In peacetime the Druzhinas would most often serve as bodyguards or handle extractions of tribute."
+ akhalivan_raidersDESCR: "Cavalry units equipped with battle-axes that made up the core of many Kakigian armies, including Valvurians and Zakarturis. They were often used to scout withing the lands controlled by the hordes."
 
  kainimoei_militia: "Kainimoei Militia"
- kainimoei_militiaDESCR: "Raised from serf and other peasant communities these poorly armed and poorly trained infantry will not be of too much use in combat. However, why waste the nobility in dangerous assaults on fortresses?"
+ kainimoei_militiaDESCR: "Raised from serf and other lowborn communities these poorly armed and poorly trained infantry will not be of too much use in combat, often serving only as a support for the heavy cavalry."
 
  geniburgher_infantry: "Geniburgher Infantry"
- geniburgher_infantryDESCR: "Geniburgher Infantry desc"
+ geniburgher_infantryDESCR: "Modern methods of warfare brought from their distant homeland allowed Geniburgher armies to quickly establish presence. The tactics and formations were quickly adopted by many local states."
 
  valvur_cavalry: "Valvur Cavalry"
- valvur_cavalryDESCR: "The Stratioti developed in the Albanian-Greek areas of the Balkan. With little or no armor, they were armed with sabers, lances and maces. This light cavalry was excellent for screening, reconnaissance and for raiding into disarrayed or fleeing enemies. With the fall or Byzantium many sought refuge in the west, and the Venetian Stratioti cavalry of the late 15th century is believed by some to have introduced modern light cavalry tactics to the west."
+ valvur_cavalryDESCR: "The Valvur Cavalry developed in northern Kakigian steppe by the Merkaatimaan herders. With little or no armor, they were armed with sabers, lances and maces. This light cavalry was excellent for screening, reconnaissance and for raiding into disarrayed or fleeing enemies. With the fall of the Zakarturi Empire and later the Bunelisuli Empire many sought to quickly expand their influence, for which these formations were perfect, allowing to effectively fight against the hordes."
 
  mesiheisi_pike: "Pike Infantry"
- mesiheisi_pikeDESCR: "When the Goths defeated the Romans at the battle of Adrianople, it heralded a new era in European warfare. Cavalry became the dominant force on the battlefield and infantry relegated to supplying a base for Cavalry to maneuver round. The English victories in the Hundred Years War, although with infantry armies, relied on defensive tactics. However the Swiss Pikemen of the late 15th century gave infantry an offensive role once again. This was quickly noticed by countries in Eastern Europe and German mercenaries were invited over to teach these new tactics."
+ mesiheisi_pikeDESCR: "When the border of Zakarturia started moving west, it heralded a new era in Kakigian warfare. Cavalry became the dominant force on the battlefield and infantry relegated to supplying a base for Cavalry to maneuver round, wowever the improved pikemen of the late 14th and early 15th centuries gave infantry an offensive role once again in Zakarturi infightings. This was quickly noticed by their neighbours and many mercenaries were invited over to teach these new tactics."
 
  tummic_charge: "Tummic Charge"
- tummic_chargeDESCR: "An exuberant Hungarian light cavalry unit renowned throughout Europe for its high discipline and skill."
+ tummic_chargeDESCR: "An exuberant Tummic light cavalry unit renowned throughout Middelande Sea for its high discipline and skill, allowing to spread chaos among enemy's line at a relatively low cost."
 
  northern_musketeer: "Northern Musketeers"
- northern_musketeerDESCR: "With the growing spread of gunpowder weapons, soon the question of what musket armed infantry should do on the battlefield was raised. In Poland, there developed a school of thought that musketeers should be used as a defensive weapon to support cavalry."
+ northern_musketeerDESCR: "With the large scale use of gunpowder weapons on the Kakigian battlefields new units began to be developed to take advantage of these. Having its origins in the Ehren and Dorchean mercenaries, these units evolved into Musket armed units that placed their main focus on the attack rather than defense."
 
  southern_musketeer: "Southern Musketeers"
- southern_musketeerDESCR: "With the large scale use of gunpowder weapons on the Eastern European battlefields new units began to be developed to take advantage of these. Having its origins in the Streltsy of Muscovy these units evolved into Musket armed units that placed their main focus on the attack rather than defense."
+ southern_musketeerDESCR: "With the growing spread of gunpowder weapons, soon the question of what musket armed infantry should do on the battlefield was raised. In Pamapoikia, there developed a school of thought that musketeers should be used as a defensive weapon to support cavalry."
 
  reformed_valvur_cavalry: "Reformed Valvur Cavalry"
- reformed_valvur_cavalryDESCR: "The original Hussar was a light cavalry unit designed primarily for skirmishing. However, the battlefield demanded that units be better armored and heavier. Thus the Hussar evolved leading eventually to the famous Winged Hussars."
+ reformed_valvur_cavalryDESCR: "The original Valvur raider was a light cavalry unit designed primarily for skirmishing. However, the battlefield demanded that units be better armored and heavier. Thus their units evolved, ultimately leading to the renowned Ratsavägis."
 
  zakarturi_caracolle: "Zakarturi Caracole"
  zakarturi_caracolleDESCR: "With the discovery that a tightly formed infantry could withstand cavalry shock action, and that the use of gunpowder weapons would inflict a fearful toll on the attacker, new cavalry tactics were required. One of the first of these was the Caracole (or spiral) where cavalry would use fire to disrupt infantry formations before attempting a charge. Developed in the West in the 16th century it quickly spread eastwards."
 
  amagari_cavalry: "Organized Amagari Cavalry"
- amagari_cavalryDESCR: "The Cossacks community originally grew up on the steppe boundary between Muscovy and Poland on one side and the Tatars on the other. In this savage environment of constant raiding, military communities of horsemen developed. They soon became in demand as hardy, if undisciplined, horsemen."
+ amagari_cavalryDESCR: "The Amagari community originally grew up on the steppe in the remnants of the Zakarturia on one side and the central hordes on the other. In this savage environment of constant raiding, military communities of horsemen developed. They soon became in demand as hardy, if undisciplined, horsemen."
 
  eastern_pistoleros: "Eastern Pistoleros"
- eastern_pistolerosDESCR: "The introduction of the Pistoleros into Kakigian warfare was met by those who saw the Pistoleros as being too defensive and who believed that infantry should be employed more offensively. The Soldaty Infantry filled this role."
+ eastern_pistolerosDESCR: "The introduction of the Pistoleros into Kakigian warfare was met by those who saw the Pistoleros as being too defensive and who believed that infantry should be employed more offensively, which led to the eastern pistoleros which placed a greated focus on mobility and taking advantage of the terrain."
 
  tapanian_infantry: "Tapanian Infantry"
  tapanian_infantryDESCR: "Although the Pistoleros came to dominate Mysentrian battlefields it was initially too slow to be of use on the more open, cavalry dominated battlefields of Kakigia. However as the pike component of the Pistoleros fell, giving it more firepower, it became more useful on the eastern battlefields."
 
  gisian_infantry: "Gisian Infantry"
- gisian_infantryDESCR: "August the Strong, Elector of Saxony, was not just famous for siring more bastards than any other European Monarch, he was also King of Poland. During his reign he brought more offensive infantry tactics to the Polish military, and the units became known as Saxon Infantry."
+ gisian_infantryDESCR: "With the renovation of Zakarturian states, some of the old tactics were being rediscovered and improved upon using gunpower technology and modern formations. This led to formation of Gisian infantry, which was able to defeat heavy Eneratian cavalry at a relatively low manpower cost."
 
  kakigian_hussar: "Kakigian Hussars"
- kakigian_hussarDESCR: "In medieval times, mounted knights had dominated the medieval battlefield but afterwards were replaced by musketeers and pikemen. In the 17th century, cavalry forces were still used for a surprise effect in battles, but had often little chance against disciplined pikemen. Therefore, cavalry forces were little used in Western Europe. In Eastern Europe with its vast steppes, cavalry remained very important. The winged Hussars played a key role there. The Polish developed an excellent curved saber (the 'palasz'), selected horses specially for their speed and endurance and they carried lances with them, of six meters, that could pierce a pikemen's armor. The winged Hussars became a heavily armored cavalry that fought countless victorious actions against a variety of enemies. They played a key role in John Sobieski's legendary lifting of the Turkish siege of Vienna in 1683. John Sobieski sent four Hussar cavalry groups in a furious charge that broke the Turkish battle line, scattering them in confusion. This victory by the winged Polish Hussars saw John Sobieski hailed as the 'savior of Vienna'."
+ kakigian_hussarDESCR: "In medieval times, mounted knights had dominated the medieval battlefield but afterwards were replaced by musketeers and pikemen. In the 17th century, cavalry forces were still used for a surprise effect in battles, but had often little chance against disciplined pikemen. Therefore, cavalry forces were little used in Mysentria. In Kakigia with its vast steppes, cavalry remained very important. The Ratsavägis and Eneratian cavalry played a key role there. The Zakarturi developed an excellent curved saber (the 'Borbo'), selected horses specially for their speed and endurance and they carried lances with them, of six meters, that could pierce a pikemen's armor. The various cavalrymen became a heavily armored cavalry that fought countless victorious actions against a variety of enemies. They played a key role in campaigns against Tummland."
 
  reformed_amagari_cavalry: "Reformed Amagari Cavalry"
- reformed_amagari_cavalryDESCR: "Cossack cavalry steadily evolved as time progressed. Rather than being a shock cavalry force like the new heavier Hussars they specialized in skirmishing and would use pistols to disorganize the enemy."
+ reformed_amagari_cavalryDESCR: "Amagari cavalry steadily evolved as time progressed. Rather than being a shock cavalry force like the new heavier Hussars they specialized in skirmishing and would use pistols to disorganize the enemy."
 
  pamapoikian_infantry: "Pamapoikian Infantry"
- pamapoikian_infantryDESCR: "Petrine Infantry have their roots in the defeat of the Russian Armies at the battle of Narva during the Great Northern War. The army had been decisively routed by the better trained, but numerically inferior, Swedish Army and the army needed new tactics if it was to succeed. Trained with iron discipline, the Petrine Infantry excelled in defense. Their tactics were built around wearing down the enemys' ability to fight through sheer staying power."
+ pamapoikian_infantryDESCR: "Pamapoikian Infantry have their roots in the defeat of the Pamapoikian army during the wars with Apaxtaros. The army had been decisively routed by the better trained, but numerically inferior, Apaxtaroi Army and the army needed new tactics if it was to succeed. Trained with iron discipline, the Pamapoikian Infantry excelled in defense. Their tactics were built around wearing down the enemys' ability to fight through sheer staying power."
 
  tummic_white_coat: "White Coat Infantry"
- tummic_white_coatDESCR: "As more ideas were imported from Western Europe, the Eastern infantry man became much more like his Western European counterpart. The Green Coat infantry had its origins in Russia and its western training methods and equipment gave their units with more staying power in combat than ever before. It also represented a shift from the Petrine defense tactics to a more offensive unit."
+ tummic_white_coatDESCR: "As more ideas were imported from Mysentria, the Eastern infantry man became much more like his Mysentrian counterpart. The White Coat infantry had its origins in Tummland and its western training methods and equipment gave their units with more staying power in combat than ever before, embracing some of the Ehren war tactics in wars against them, adopting the tactics of fighting fire with fire."
  
  lounavaki_lancers: "Lounaväki Lancers"
- lounavaki_lancersDESCR: "The Hussars of Eastern Europe had long been equipped with a lance along with other equipment. The lance was a power weapon in the attack, allowing a trooper to reach his enemy before the enemy could reach him, however, once the enemy managed to get passed the lance the lancer was vulnerable. Lance equipped cavalry were very strong in the attack but weak defensively."
+ lounavaki_lancersDESCR: "The Hussars of Merkaatimaa had long been equipped with a lance along with other equipment. The lance was a power weapon in the attack, allowing a trooper to reach his enemy before the enemy could reach him, however, once the enemy managed to get passed the lance the lancer was vulnerable. Lance equipped cavalry were very strong in the attack but weak defensively."
 
  reformed_eastern_chevaliers: "Reformed Eastern Chevaliers"
- reformed_eastern_chevaliersDESCR: "The Cossack continued to evolve as a unit. The use of new weapons and tactics gave the units greater staying power in fire combat and more shock power."
+ reformed_eastern_chevaliersDESCR: "Due to the increased importance of firearms in warfare, many sought to adapt their traditional ways of fighting to not fall behind their rivals. This led to improved performance of chevaliers, which now included wheelock pistols and muskets to attack the enemy more safely from a distance, retreating to reload and repeating the maneuver"
 
  kakigian_cuirassier: "Kakigian Cuirassiers"
  kakigian_cuirassierDESCR: "The Cuirassier takes its name from the Cuirass, a breast plate worn by the heaviest cavalry units. Wielding a heavy sword rather than a light saber, these units are fearsome when they charge. Usually supported by units of carbine equipped cavalry to give them extra punch, these units add shock power to any army."
 
  ratsunikud_cavalry: "Northern Ratsunikud Cavalry"
- ratsunikud_cavalryDESCR: "Cossacks remained an integral part of Eastern European armies. Although neither as disciplined nor as effective in the charge as the heavy cavalry. These light units specialized in raiding and sniping to disrupt their opponents."
+ ratsunikud_cavalryDESCR: "Amagari, known in the north as Ratsunikud, remained an integral part of Kakigian armies. Although neither as disciplined nor as effective in the charge as the heavy cavalry. These light units specialized in raiding and sniping to disrupt their opponents."
 
  federational_infantry: "Federational Infantry"
- federational_infantryDESCR: "Mass Infantry tactics were a departure from the linear tactics that had been dominant for so long. These units can be summed up in two of the maxims of the famous Russian general Suvorov 'train hard, fight easy' and 'The bullet is a fool, the bayonet is a fine chap'. They were highly drilled shock infantry who favored the mass charge over musket fire."
+ federational_infantryDESCR: "Mass Infantry tactics were a departure from the linear tactics that had been dominant for so long. These units can be summed up in two of the maxims of the famous Federational general Tsatsakiv: 'train hard, fight easy' and 'The bullet is a fool, the bayonet is a fine chap'. They were highly drilled shock infantry who favored the mass charge over musket fire."
 
  #Yermic (Muslim)
 
