dżi ef eks + fixes

--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -78,7 +78,7 @@
  
  ability_steppe_nomads_mechanic: "Kakigian Horde Mechanic"
  tribal_loyalty_power: "Tribal Loyalty"
- tribal_loyalty_power_desc: "Tribal Loyalty represents how much trust tribes put in the [Root.GetTitle].\n§YIncreased by:§!\n-having high ruler military skill\n-winning wars\n-having high power projection\n-having high horde unity\n-having high prestige\n-having specific ruler personalities\n§YDecreased by:§!\n-having low ruler military skill\n-using government interactions\n-losing wars"
+ tribal_loyalty_power_desc: "Tribal Loyalty represents how much trust tribes put in the [Root.Monarch.GetTitle].\n§YIncreased by:§!\n-having high ruler military skill\n-winning wars\n-having high power projection\n-having high horde unity\n-having high prestige\n-having specific ruler personalities\n§YDecreased by:§!\n-having low ruler military skill\n-using government interactions\n-losing wars"
  monthly_tribal_loyalty_power: "Monthly Tribal Loyalty"
  tribal_loyalty_power_gain_modifier: "Tribal Loyalty Modifier"
  gather_the_host_power: "Gather the Host"
