--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -945,8 +945,8 @@
  KHA: "Khantadun"
  KHA_ADJ: "Khantan"
 
- BAC: "Barcan"
- BAC_ADJ: "Barcanian"
+ BAC: "Barczan"
+ BAC_ADJ: "Barczanian"
  DOI: "Donieprowa"
  DOI_ADJ: "Donieprowan"
  KAZ: "Kasznary"
