--- a/localisation/TD_peasants_l_english.yml
+++ b/localisation/TD_peasants_l_english.yml
@@ -139,7 +139,7 @@
 
  estate_peasants_hire_adm_advisor: "Hire an Administrative Advisor"
  estate_peasants_fire_adm_advisor: "Fire our Administrative Advisor"
- estate_peasants_hire_adm_advisor_desc: "The [Root.GetPeasantryName desire the [Root.Monarch.GetTitle] to hire a new administrative advisor."
+ estate_peasants_hire_adm_advisor_desc: "The [Root.GetPeasantryName] desire the [Root.Monarch.GetTitle] to hire a new administrative advisor."
  estate_peasants_fire_adm_advisor_desc: "[Root.Adm_Advisor.GetTitle] [Root.Adm_Advisor.GetName] has insulted the [Root.GetPeasantryName. They demand that we fire [Root.Adm_Advisor.GetHerHim]!"
  estate_peasants_hire_mil_advisor: "Hire a Military Advisor"
  estate_peasants_hire_mil_advisor_desc: "The [Root.GetPeasantryName] desire the [Root.Monarch.GetTitle] to hire a new military advisor."
