--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -209,7 +209,7 @@
  shuuduragis: "Shüüduragis"
  orgonuudis: "Örgönuudis"
  tsologadis: "Tsölögadis"
- khuitendaichis: "Khütiendaichis"
+ khuitendaichis: "Khüitendaichis"
 
  khutigar_group: "Khutigar"
  khudulan: "Khudulan"
