--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2573,7 +2573,7 @@
  PROV2572: "Minitkaa"
  PROV2573: "2573"
  PROV2574: "Nalauttuk"
- PROV2575: "2575"
+ PROV2575: "Okomati Gulf"
  PROV2576: "Pasiaktuk"
  PROV2577: "2577"
  PROV2578: "Ivaktuk"
@@ -2795,7 +2795,7 @@
  PROV2794: "Toiumi"
  PROV2795: "Tsoyokan Bay"
  PROV2796: "2796"
- PROV2797: "2797"
+ PROV2797: "Cheukan Coast"
  PROV2798: "2798"
  PROV2799: "2799"
  PROV2800: "2800"
@@ -3215,21 +3215,21 @@
  PROV3214: "Tüluman"
  PROV3215: "3215"
  PROV3216: "Tanias"
- PROV3217: "3217"
- PROV3218: "3218"
- PROV3219: "3219"
- PROV3220: "3220"
- PROV3221: "3221"
+ PROV3217: "Nenqwa"
+ PROV3218: "Javama"
+ PROV3219: "Penie"
+ PROV3220: "Temevaq"
+ PROV3221: "Temketley"
  PROV3222: "3222"
  PROV3223: "3223"
  PROV3224: "3224"
  PROV3225: "3225"
- PROV3226: "3226"
- PROV3227: "3227"
- PROV3228: "3228"
- PROV3229: "3229"
- PROV3230: "3230"
- PROV3231: "3231"
+ PROV3226: "Qemej"
+ PROV3227: "Panige"
+ PROV3228: "Vetya"
+ PROV3229: "Tempe"
+ PROV3230: "Ieruqa"
+ PROV3231: "Keli"
  PROV3232: "Huangjie"
  PROV3233: "Shengkwan"
  PROV3234: "Pakgang"
