--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3206,24 +3206,24 @@
  PROV3205: "Ögöljinkhost"
  PROV3206: "Unasun"
  PROV3207: "Shargüyekh"
- PROV3208: "3208"
+ PROV3208: "Katye"
  PROV3209: "Khaguulakh"
  PROV3210: "Sabuo"
- PROV3211: "3211"
- PROV3212: "3212"
- PROV3213: "3213"
+ PROV3211: "Buleye"
+ PROV3212: "Siegi"
+ PROV3213: "Qusta"
  PROV3214: "Tüluman"
- PROV3215: "3215"
+ PROV3215: "Segda"
  PROV3216: "Tanias"
  PROV3217: "Nenqwa"
  PROV3218: "Javama"
  PROV3219: "Penie"
  PROV3220: "Temevaq"
  PROV3221: "Temketley"
- PROV3222: "3222"
- PROV3223: "3223"
- PROV3224: "3224"
- PROV3225: "3225"
+ PROV3222: "Yaipeuy"
+ PROV3223: "Bigpe"
+ PROV3224: "Waigi"
+ PROV3225: "Qoti"
  PROV3226: "Qemej"
  PROV3227: "Panige"
  PROV3228: "Vetya"
@@ -3267,7 +3267,7 @@
  PROV3266: "Hulan"
  PROV3267: "Beimen"
  PROV3268: "Ziyun"
- PROV3269: "3269"
+ PROV3269: "Gona"
  PROV3270: "3270"
  PROV3271: "3271"
  PROV3272: "Yanshan"
