--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  PROV1: "Geniburgh"
  PROV2: "Linamaco"
- PROV3: "3"
+ PROV3: "Northern Blawennian Sea"
  PROV4: "4"
  PROV5: "Ehrenstadt"
  PROV6: "Kerborn"
@@ -2555,17 +2555,17 @@
  PROV2554: "Sarri"
  PROV2555: "Samna"
  PROV2556: "2556"
- PROV2557: "2557"
+ PROV2557: "Gasihaenan Coast"
  PROV2558: "Bashipistan Coast"
  PROV2559: "Paungak"
  PROV2560: "Ukhak"
  PROV2561: "Kunulik"
  PROV2562: "Katiktikigak"
  PROV2563: "Anuyaktuk"
- PROV2564: "2564"
- PROV2565: "2565"
+ PROV2564: "Eastern Tembeni Sea"
+ PROV2565: "Western Tembeni Sea"
  PROV2566: "Igliktuk"
- PROV2567: "2567"
+ PROV2567: "Yesudoan Sea"
  PROV2568: "Avvana"
  PROV2569: "Kapiruk"
  PROV2570: "Ittuk"
@@ -3030,7 +3030,7 @@
  PROV3029: "3029"
  PROV3030: "3030"
  PROV3031: "3031"
- PROV3032: "3032"
+ PROV3032: "Southern Blawennian Sea"
  PROV3033: "3033"
  PROV3034: "3034"
  PROV3035: "3035"
@@ -3268,7 +3268,7 @@
  PROV3267: "Beimen"
  PROV3268: "Ziyun"
  PROV3269: "Gona"
- PROV3270: "3270"
+ PROV3270: "Tembeni"
  PROV3271: "3271"
  PROV3272: "Yanshan"
  PROV3273: "Buran"
