--- a/localisation/TD_01_flavour_wasichantlia_l_english.yml
+++ b/localisation/TD_01_flavour_wasichantlia_l_english.yml
@@ -105,3 +105,21 @@
  tonatitlan_lummak_merits_desc: "People of the Lummak forest often avoid interacting with us, mostly focusing on diplomacy and trade between themselves or the far south. Despite this, many of their bright minds live at our courts and serve the sun empire."
  tonatitlan_taedian_merchants: "Mysentrian Merchants"
  tonatitlan_taedian_merchants_desc: "The merchants from a distant continent of Mysentria often visit our ports, wanting to not only to trade, but also learn about our people, our land and resources. They travel our long roads. Our court beliefs that they will lead us to global glory and nothing bad will ever come out of it."
+
+ ueyaqnehuei_ideas: "Ueyaqnehueii Ideas"
+ ueyaqnehuei_ideas_bonus: "Ueyaqnehueii Ambition"
+ ueyaqnehuei_ideas_start: "Ueyaqnehueii Traditions"
+ uey_legacy_of_the_reunification_war: "Restoring the Empire"
+ uey_legacy_of_the_reunification_war_desc: "When the easterners from beyond the sea returned to our land, another great plague struck our people, bringing an end to the second great empire of Earth. We managed to overcome the disease and collapse of the society, soon after filling the power vacuum with our armies. Now we have claimed the mantle of the third empire, the one that will rule with an iron hand over lands where the sun shines."
+ uey_laabkotian_mint: "Laabkotian Mint"
+ uey_laabkotian_mint_desc: "Shiny metals of the Laabkot such as gold and silver were merely a novelty for our people due to their fragility, being used mostly for decoration and sacrifices to the gods. However it appears that easterners have a specific fondness of these metals, often being able to trade exorbant amounts of goods in exchange for them. To exploit this trend, new mining towns were established and gold was set as a currency alongside cocoa."
+ uey_eight_great_forts: "Eight Great Forts"
+ uey_eight_great_forts_desc: "Some of the peopel from beyond the sea weren't as keen to trade. Some of them were even too keen, often leading to pressing us to open up more to the outside world. To protect ourselves, we have build a series of forts on our northern, western and eastern borders, many resembling the Panbah fortress, but brough to the modern standard. We have to show the Mysentrians that we will not give up our land so easily."
+ uey_embrace_the_tlalquiquiztli: "Embrace the Tlalquiquiztli"
+ uey_embrace_the_tlalquiquiztli_desc: "The explosive and fiery tlalquiquiztli was used by first Mysentrian settlers to scare off native populations. After years of exchange, we also embraced the black powder ourselves and it was particularily helpful in the reunification war of the sun empire. Effectiveness of tlalquiquiztli weapons accompanied by bravery of our men allowed us to survive another day."
+ uey_expand_the_milpas: "Expanding the Milpas"
+ uey_expand_the_milpas_desc: "Milpas are in their nature small sized, localized and used to cultivate a variety of plants. With the increasing of our population even beyond the numbers from before the plague, we found ourselves in a need to reform this ancient system. Under Chaan Muan the effort to build many new and scattered small villages led to even greater growth of our might."
+ uey_atlaqotlatl_fleet: "Atlaqotlatl Fleet"
+ uey_atlaqotlatl_fleet_desc: "Another important aspect of keeping a strong empire in these modern times is the ability to maintain a naval presence around your nation. Thankfully, our coasts mostly lie in the Atlaqotlatl Bay, so keeping control of the region is relatively easy. Small and professional with the ability to quickly repair and replenish men in a nearby fort was established and proved to be a success in some of the later conflicts."
+ uey_rapid_modernization: "Rapid Modernization"
+ uey_rapid_modernization_desc: "The first contact with the easterners shook our entire civilization. Their second coming was just an unexpected as the first one, however many of us adapted quicker to the new state of the world around them. What was dangerous at first, quickly was adopted by our people and innovations of Mysentria found their place in our cities and villages. We are no longer considered a backwater and many now fear our might."
